// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmailInput desktop className 1`] = `
<div
  className="YpcEmailInput Test"
>
  <label
    className="YpcEmailInput-Label"
  >
    <div
      className="YpcEmailInput-LabelText"
    >
      Введите почту
    </div>
    <input
      className="YpcEmailInput-Field"
      onBlur={[Function]}
      onFocus={[Function]}
      type="email"
      value=""
    />
  </label>
  <div
    className="YpcEmailInput-Description"
  >
    На эту почту мы вышлем вам чек
  </div>
</div>
`;

exports[`EmailInput desktop value 1`] = `
<div
  className="YpcEmailInput YpcEmailInput_fulled"
>
  <label
    className="YpcEmailInput-Label"
  >
    <div
      className="YpcEmailInput-LabelText"
    >
      Введите почту
    </div>
    <input
      className="YpcEmailInput-Field"
      onBlur={[Function]}
      onFocus={[Function]}
      type="email"
      value="example@yandex.ru"
    />
  </label>
  <div
    className="YpcEmailInput-Description"
  >
    На эту почту мы вышлем вам чек
  </div>
</div>
`;

exports[`EmailInput touch-phone className 1`] = `
<div
  className="YpcEmailInput Test"
>
  <label
    className="YpcEmailInput-Label"
  >
    <div
      className="YpcEmailInput-LabelText"
    >
      Введите почту
    </div>
    <input
      className="YpcEmailInput-Field"
      onBlur={[Function]}
      onFocus={[Function]}
      type="email"
      value=""
    />
  </label>
  <div
    className="YpcEmailInput-Description"
  >
    На эту почту мы вышлем вам чек
  </div>
</div>
`;

exports[`EmailInput touch-phone value 1`] = `
<div
  className="YpcEmailInput YpcEmailInput_fulled"
>
  <label
    className="YpcEmailInput-Label"
  >
    <div
      className="YpcEmailInput-LabelText"
    >
      Введите почту
    </div>
    <input
      className="YpcEmailInput-Field"
      onBlur={[Function]}
      onFocus={[Function]}
      type="email"
      value="example@yandex.ru"
    />
  </label>
  <div
    className="YpcEmailInput-Description"
  >
    На эту почту мы вышлем вам чек
  </div>
</div>
`;
